--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1"><meta name="author" content="3 Luxor Pots"><title>Luxor 3 Pots App Play Jackpot Slot on Mobile</title><meta name="description" content="Download the Luxor 3 Pots app for nonstop slot action! Spin, collect
-pots, and win big jackpots anytime, anywhere now on iOS and Android."><meta name="keywords" content="Luxor 3 Pots app, Luxor 3 Pots slot game, Luxor 3 Pots mobile, Play Luxor 3 Pots, Luxor 3 Pots download, Luxor 3 Pots for iPhone, Luxor 3 Pots for Android, Luxor 3 Pots mobile slot"><link rel="canonical" href="https://luxorpots-ca.com/app/"><link rel="icon" href="/images/favicon-32x32.png"><meta property="og:title" content="Luxor 3 Pots App Play Jackpot Slot on Mobile">
+pots, and win big jackpots anytime, anywhere now on iOS and Android."><meta name="keywords" content="Luxor 3 Pots app, Luxor 3 Pots slot game, Luxor 3 Pots mobile, Play Luxor 3 Pots, Luxor 3 Pots download, Luxor 3 Pots for iPhone, Luxor 3 Pots for Android, Luxor 3 Pots mobile slot"><link rel="canonical" href="https://3hotchilliesit.it.com/como-ganar/"><link rel="icon" href="/images/favicon-32x32.png"><meta property="og:title" content="Luxor 3 Pots App Play Jackpot Slot on Mobile">
 <meta property="og:description" content="Download the Luxor 3 Pots app for nonstop slot action! Spin, collect
 pots, and win big jackpots anytime, anywhere now on iOS and Android.">
 <meta property="og:type" content="website">
