--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1"><meta name="author" content="3 Luxor Pots"><title>Luxor 3 Pots Demo Play Free Slot Online Now</title><meta name="description" content="Try Luxor 3 Pots for free! Spin the reels, test bonus pots, and
 explore all features in demo mode. No download or registration needed
-just play!"><meta name="keywords" content="Luxor 3 Pots demo, Luxor 3 Pots slot demo, Luxor 3 Pots no download, Spin Luxor 3 Pots for fun"><link rel="canonical" href="https://luxorpots-ca.com/demo/"><link rel="icon" href="/images/favicon-32x32.png"><meta property="og:title" content="Luxor 3 Pots Demo Play Free Slot Online Now">
+just play!"><meta name="keywords" content="Luxor 3 Pots demo, Luxor 3 Pots slot demo, Luxor 3 Pots no download, Spin Luxor 3 Pots for fun"><link rel="canonical" href="https://3hotchilliesit.it.com/demo/"><link rel="icon" href="/images/favicon-32x32.png"><meta property="og:title" content="Luxor 3 Pots Demo Play Free Slot Online Now">
 <meta property="og:description" content="Try Luxor 3 Pots for free! Spin the reels, test bonus pots, and
 explore all features in demo mode. No download or registration needed
 just play!">
