--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1"><meta name="author" content="3 Luxor Pots"><title>Luxor 3 Pots Slot in Canada Egyptian Jackpot Action Play Now</title><meta name="description" content="Spin for treasure in Luxor 3 Pots! Unlock jackpots, free spins & big
 wins in this epic Egyptian-themed slot. Play online now & feel the gold
-rush!"><meta name="keywords" content="3 luxor pots hold and win, 3 luxor pots hold and win playson, 3 luxor pots hold and win slot, Luxor 3 Pots slot, Luxor 3 Pots game, Luxor 3 Pots casino, Play Luxor 3 Pots online"><link rel="canonical" href="https://luxorpots-ca.com/privacy-policy/"><link rel="icon" href="/images/favicon-32x32.png"><meta property="og:title" content="Luxor 3 Pots Slot in Canada Egyptian Jackpot Action Play Now">
+rush!"><meta name="keywords" content="3 luxor pots hold and win, 3 luxor pots hold and win playson, 3 luxor pots hold and win slot, Luxor 3 Pots slot, Luxor 3 Pots game, Luxor 3 Pots casino, Play Luxor 3 Pots online"><link rel="canonical" href="https://3hotchilliesit.it.com/privacy-policy/"><link rel="icon" href="/images/favicon-32x32.png"><meta property="og:title" content="Luxor 3 Pots Slot in Canada Egyptian Jackpot Action Play Now">
 <meta property="og:description" content="Spin for treasure in Luxor 3 Pots! Unlock jackpots, free spins & big
 wins in this epic Egyptian-themed slot. Play online now & feel the gold
 rush!">
